# PAOO

./: README.md
Project/: CMakeLists.txt  main  main.cpp
Project/include/: person.h  student.h  student_licenta.h  student_master.h
Project/lib/: CMakeLists.txt  student.cpp  student_licenta.cpp  student_master.cpp
Project/student/: CMakeLists.txt  student.cpp  student.h
Step1/: CMakeLists.txt
